translation-tool/inputs/source_meta/objects/HSvc_Email__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Emails</relationshipLabel>
        <relationshipName>EmailAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_CampaignMemberId__c</fullName>
        <label>Campaign Member ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Clicked__c</fullName>
        <formula>HSvc_NumberOfUniqueClicks__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clicked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_Contact_ID__c</fullName>
        <formula>HSvc_Contact__r.Id</formula>
        <label>Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Emails</relationshipLabel>
        <relationshipName>EmailsContact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_DateBounced__c</fullName>
        <inlineHelpText>The date and time when this subscriber’s email address bounced</inlineHelpText>
        <label>Date Bounced</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HSvc_DateOpened__c</fullName>
        <inlineHelpText>The date and time when the subscriber opened the email</inlineHelpText>
        <label>Date Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HSvc_DateSent__c</fullName>
        <label>Date/Time Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HSvc_DateUnsubscribed__c</fullName>
        <inlineHelpText>The date and time when the subscriber unsubscribed</inlineHelpText>
        <label>Date Unsubscribed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HSvc_Email_Asset_ID__c</fullName>
        <label>Email Asset ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Email_ID__c</fullName>
        <label>Email ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Email_Thumbnail__c</fullName>
        <label>Email Thumbnail</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>HSvc_Email__c</fullName>
        <label>Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_FromAddress__c</fullName>
        <label>From Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>HSvc_FromName__c</fullName>
        <label>From Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_HardBounce__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The email sent to this subscriber  was rejected due to permanent conditions (this typically results when &quot;user unknown&quot; or &quot;domain not found&quot; errors occur)</inlineHelpText>
        <label>Hard Bounce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_Lead_ID__c</fullName>
        <formula>HSvc_Lead__r.Id</formula>
        <label>Lead ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Emails</relationshipLabel>
        <relationshipName>EmailLeads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_MergeId__c</fullName>
        <externalId>true</externalId>
        <label>Merge Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HSvc_NumberOfTotalClicks__c</fullName>
        <inlineHelpText>The total number of times this subscriber clicked on the links on this email</inlineHelpText>
        <label>Number of Total Clicks</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSvc_NumberOfUniqueClicks__c</fullName>
        <inlineHelpText>The unique number of times this subscriber clicked on the links on this email (unique means one click per link)</inlineHelpText>
        <label>Links Clicked</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSvc_Opened__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether the subscriber opened the email or not</inlineHelpText>
        <label>Opened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_SoftBounce__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The email sent was rejected due to a seemingly temporary condition, such as a full inbox, after the system retries unsuccessfully to send the email every 15 minutes for 72 hours. A subscriber will be set to Held status after three soft bounces</inlineHelpText>
        <label>Soft Bounce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_SubjectLine__c</fullName>
        <label>Subject Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Tracking_As_Of__c</fullName>
        <defaultValue>now()</defaultValue>
        <inlineHelpText>The date and time the last tracking update was received by Salesforce</inlineHelpText>
        <label>Tracking As Of</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the Communication event</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Email</label>
    <listViews>
        <fullName>HSvc_All</fullName>
        <columns>NAME</columns>
        <columns>HSvc_FromName__c</columns>
        <columns>HSvc_DateSent__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>HSvc_All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Emails</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>